Criado section sobre

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
             </nav>
         </div>
     
-   </header> 
-
+   </header id="sobre"> 
+        <div class="container">
+            <img src="./img/sobre.jpj" alt="Sobre ">
+        </div>
    <section>
-    
+
    </section>
   
 </body>
