Correção links da nav

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <h1>GUITARRISTA PAULINHO</h1>
             <nav>
                 <ul class="brand-list">
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Contato</a></li>
-                    <li><a href="#">Videos youtube</a></li>
+                    <li><a href="#about">Sobre</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="#youtube">Videos youtube</a></li>
                 </ul>
             </nav>
         </div>
@@ -50,7 +50,7 @@
    
    </section>
 
-   <section class="youtube">
+   <section class="youtube" id="youtube">
         <div class="container">
             <div>
                 <h2> Trabalhos no Youtube</h2>
@@ -80,7 +80,7 @@
 
    </section>
 
-   <section class="contato">
+   <section class="contato" id="contato">
     <div class="container">
         <h2>Contato</h2>
 
